tests/core/snapshots/experimental-headers.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json",
    "x-experimental": "experimental-header",
    "x-tailcall": "tailcall-header"
  },
  "body": {
    "data": {
      "users": [
        {
          "id": 1,
          "name": "Leanne Graham"
        }
      ]
    }
  }
}
