tests/core/snapshots/federation-router.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server(port: 8000)
  @upstream(baseURL: "http://jsonplaceholder.typicode.com", batch: {delay: 100, headers: []}, httpCache: 42)
  @link(src: "http://localhost:4000", meta: {name: "Users"}, type: SubGraph)
  @link(src: "http://localhost:5000", meta: {name: "Posts"}, type: SubGraph) {
  query: Query
}

type Post {
  body: String!
  id: Int!
  title: String!
  user: User @http(path: "/users/{{.value.userId}}")
  userId: Int!
}

type Query {
  posts: [Post] @http(path: "/posts")
  user(id: Int!): User @http(path: "/users/{{.args.id}}")
  users: [User] @http(path: "/users")
  version: String @expr(body: "test")
}

type User {
  email: String!
  id: Int!
  name: String!
  phone: String
  username: String!
  website: String
}
