tests/core/snapshots/federation-subgraph-force-disabled.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
snapshot_kind: text
---
type Query {
  user(id: Int!): User
}

type User {
  id: Int!
  name: String!
}

schema {
  query: Query
}
